--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
 
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+
+    <link href="http://dev.see8ch.com/see8ch/v3/fonts/ss-social/ss-social.css" rel="stylesheet" />
+
+    <link href="http://dev.see8ch.com/see8ch/v3/fonts/ss-standard/ss-standard.css" rel="stylesheet" />
+
       <link rel="stylesheet" href="assets/css/style.css">
 
   <style>
@@ -208,6 +214,7 @@
 
   </style>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
 
@@ -218,7 +225,6 @@
   --><div class="tab"><span>Work</span></div><!--
   --><div class="tab"><span>Profiles</span></div><!--
   --><div class="tab" ><span>Store</span></div><!--
-  --><div class="tab" ><span>Tours</span></div><!--
   --><div class="tab" ><span>PORTFOLIO</span></div><!--
   --><div class="tab" ><span>BLOG</span></div><!--
   --><div class="tab" ><span>AROUND THE WEB</span></div><!--
@@ -382,7 +388,7 @@
               </li>
               <li id="cloud" class="active">
                 <a>
-                  <img src="https://resmim.net/f/lzell7.png" />
+                  <img src="http://grantcr.com/files/icloud.png" />
                 </a>
               </li>
               <li id="portfolio">
@@ -392,7 +398,7 @@
               </li>
               <li id="settings">
                 <a>
-                  <img src="http://grantcr.com/files/settings.png" />
+                  <img src="https://resmim.net/f/tN9Z3d.png"/>
                 </a>
               </li>
             </ul>
@@ -400,27 +406,47 @@
         </div>
       </div>
     </section>
-    <section>
-      <h2>#8</h2>
-      <p>
-        Here's some random shit for this random tab on this random template.
-      </p>
-      <p>
-        Here's some random shit for this random tab on this random template.
-      </p>
-      <p>
-        Here's some random shit for this random tab on this random template.
-      </p>
-    </section>
+      <section id="section8">
+          <div id="hire">
+          <h1>Contact Me</h1>
+
+          <form>
+              <div class="field name-box">
+                  <input type="text" id="name" placeholder="Who Are You?"/>
+                  <label for="name">Name</label>
+                  <span class="ss-icon">check</span>
+              </div>
+
+              <div class="field email-box">
+                  <input type="text" id="email1" placeholder="name@email.com"/>
+                  <label for="email1">Email</label>
+                  <span class="ss-icon">check</span>
+              </div>
+
+              <div class="field msg-box">
+                  <textarea id="msg" rows="4" placeholder="Your message goes here..."/></textarea>
+                  <label for="msg">Msg</label>
+                  <span class="ss-icon">check</span>
+              </div>
+
+              <input class="button" type="submit" value="Send" />
+          </form>
+          </div>
+      </section>
   </div>
 </div>
 <div id="footer">
   <span style="display:block;font-size:0.9em;line-height:55px;"><span style="display:inline-block;">&copy; <span style="font-family:'Titillium Web';font-weight:900;letter-spacing:0.06em">Copyright YusufBestas </span> in his 25th but people say its 2018</span></span>
   <span style="display:block;font-size:0.7em;line-height:30px;margin-top:-25px;color:rgba(255,255,255,0.15)">&lang; !--Web Developer-- &rang;<span>
 </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js'></script>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.4/SmoothScroll.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
+
   <script src="assets/js/scripts.min.js"></script>
 
 </body>
