--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8">
   <title>Yusuf Beştaş Web Developerr</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:900" rel="stylesheet">
-  
+    <link href="http://dev.see8ch.com/see8ch/v3/fonts/ss-standard/ss-standard.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
-
-    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
+          rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'>
     <link href="http://dev.see8ch.com/see8ch/v3/fonts/ss-social/ss-social.css" rel="stylesheet" />
 
-    <link href="http://dev.see8ch.com/see8ch/v3/fonts/ss-standard/ss-standard.css" rel="stylesheet" />
 
       <link rel="stylesheet" href="assets/css/style.css">
 
@@ -346,17 +345,171 @@
         Here's some random shit for this random tab on this random template.
       </p>
     </section>
-    <section>
-      <h2>#6</h2>
-      <p>
-        Here's some random shit for this random tab on this random template.
-      </p>
-      <p>
-        Here's some random shit for this random tab on this random template.
-      </p>
-      <p>
-        Here's some random shit for this random tab on this random template.
-      </p>
+    <section id="section6">
+        <div class="wrapper">
+
+            <div class="background">
+                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132206/news-slider/background.jpg" alt="">
+            </div>
+            <div class="item-bg"></div>
+
+            <div class="news-slider">
+                <div class="news-slider__wrp swiper-wrapper">
+                    <div class="news-slider__item swiper-slide">
+                        <a href="#" class="news__item">
+                            <div class="news-date">
+                                <span class="news-date__title">24</span>
+                                <span class="news-date__txt">May</span>
+                            </div>
+                            <div class="news__title">
+                                Lorem Ipsum Dolor Sit Amed
+                            </div>
+
+                            <p class="news__txt">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                            </p>
+
+                            <div class="news__img">
+                                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132205/news-slider/item-2.jpg" alt="news">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="news-slider__item swiper-slide">
+                        <a href="#" class="news__item">
+                            <div class="news-date">
+                                <span class="news-date__title">25</span>
+                                <span class="news-date__txt">May</span>
+                            </div>
+                            <div class="news__title">
+                                Lorem Ipsum Dolor Sit Amed
+                            </div>
+
+                            <p class="news__txt">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                            </p>
+
+                            <div class="news__img">
+                                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132205/news-slider/item-3.jpg" alt="news">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="news-slider__item swiper-slide">
+                        <a href="#" class="news__item">
+                            <div class="news-date">
+                                <span class="news-date__title">26</span>
+                                <span class="news-date__txt">May</span>
+                            </div>
+                            <div class="news__title">
+                                Lorem Ipsum Dolor Sit Amed
+                            </div>
+
+                            <p class="news__txt">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                            </p>
+
+                            <div class="news__img">
+                                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132205/news-slider/item-4.jpg" alt="news">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="news-slider__item swiper-slide">
+                        <a href="#" class="news__item">
+                            <div class="news-date">
+                                <span class="news-date__title">27</span>
+                                <span class="news-date__txt">May</span>
+                            </div>
+                            <div class="news__title">
+                                Lorem Ipsum Dolor Sit Amed
+                            </div>
+
+                            <p class="news__txt">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                            </p>
+
+                            <div class="news__img">
+                                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132205/news-slider/item-2.jpg" alt="news">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="news-slider__item swiper-slide">
+                        <a href="#" class="news__item">
+                            <div class="news-date">
+                                <span class="news-date__title">28</span>
+                                <span class="news-date__txt">May</span>
+                            </div>
+                            <div class="news__title">
+                                Lorem Ipsum Dolor Sit Amed
+                            </div>
+
+                            <p class="news__txt">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                            </p>
+
+                            <div class="news__img">
+                                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132205/news-slider/item-5.jpg" alt="news">
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="news-slider__item swiper-slide">
+                        <a href="#" class="news__item">
+                            <div class="news-date">
+                                <span class="news-date__title">29</span>
+                                <span class="news-date__txt">May</span>
+                            </div>
+                            <div class="news__title">
+                                Lorem Ipsum Dolor Sit Amed
+                            </div>
+
+                            <p class="news__txt">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                            </p>
+
+                            <div class="news__img">
+                                <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1537132205/news-slider/item-4.jpg" alt="news">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="news-slider__ctr">
+
+                    <div class="news-slider__arrows">
+                        <button class="news-slider__arrow news-slider-prev">
+          <span class="icon-font">
+            <svg class="icon icon-arrow-left"><use xlink:href="#icon-arrow-left"></use></svg>
+          </span>
+                        </button>
+                        <button class="news-slider__arrow news-slider-next">
+          <span class="icon-font">
+            <svg class="icon icon-arrow-right"><use xlink:href="#icon-arrow-right"></use></svg>
+          </span>
+                        </button>
+                    </div>
+
+                    <div class="news-slider__pagination"></div>
+
+                </div>
+
+            </div>
+
+        </div>
+        <svg hidden="hidden">
+            <defs>
+                <symbol id="icon-arrow-left" viewBox="0 0 32 32">
+                    <title>arrow-left</title>
+                    <path d="M0.704 17.696l9.856 9.856c0.896 0.896 2.432 0.896 3.328 0s0.896-2.432 0-3.328l-5.792-5.856h21.568c1.312 0 2.368-1.056 2.368-2.368s-1.056-2.368-2.368-2.368h-21.568l5.824-5.824c0.896-0.896 0.896-2.432 0-3.328-0.48-0.48-1.088-0.704-1.696-0.704s-1.216 0.224-1.696 0.704l-9.824 9.824c-0.448 0.448-0.704 1.056-0.704 1.696s0.224 1.248 0.704 1.696z"></path>
+                </symbol>
+                <symbol id="icon-arrow-right" viewBox="0 0 32 32">
+                    <title>arrow-right</title>
+                    <path d="M31.296 14.336l-9.888-9.888c-0.896-0.896-2.432-0.896-3.328 0s-0.896 2.432 0 3.328l5.824 5.856h-21.536c-1.312 0-2.368 1.056-2.368 2.368s1.056 2.368 2.368 2.368h21.568l-5.856 5.824c-0.896 0.896-0.896 2.432 0 3.328 0.48 0.48 1.088 0.704 1.696 0.704s1.216-0.224 1.696-0.704l9.824-9.824c0.448-0.448 0.704-1.056 0.704-1.696s-0.224-1.248-0.704-1.664z"></path>
+                </symbol>
+            </defs>
+        </svg>
     </section>
     <section id="section7">
 
@@ -442,10 +595,13 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js'></script>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.4/SmoothScroll.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.4/SmoothScroll.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
+
 
   <script src="assets/js/scripts.min.js"></script>
 
